[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/terminal/terminal_ui.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/minigames/minigame_popup.tscn" id="2"]

[node name="TerminalUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="DarkOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="TerminalPanel" type="PanelContainer" parent="."]
anchor_left = 0.02
anchor_right = 0.98
anchor_top = 0.45
anchor_bottom = 0.96
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="TerminalPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="TerminalPanel/Margin"]
layout_mode = 2

[node name="HeaderRow" type="HBoxContainer" parent="TerminalPanel/Margin/Layout"]
layout_mode = 2
size_flags_vertical = 0

[node name="HeaderIcon" type="Label" parent="TerminalPanel/Margin/Layout/HeaderRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "MATRIX TERMINAL v2.0"

[node name="TargetLabel" type="Label" parent="TerminalPanel/Margin/Layout/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
text = "TARGET: ---"
horizontal_alignment = 1

[node name="TraceLabel" type="Label" parent="TerminalPanel/Margin/Layout/HeaderRow"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "TRACE:"

[node name="TraceBar" type="ProgressBar" parent="TerminalPanel/Margin/Layout/HeaderRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Sep" type="HSeparator" parent="TerminalPanel/Margin/Layout"]
layout_mode = 2
theme_override_colors/separator_color = Color(0, 0.5, 0, 0.6)

[node name="HSplit" type="HSplitContainer" parent="TerminalPanel/Margin/Layout"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -200

[node name="InspectorPanel" type="PanelContainer" parent="TerminalPanel/Margin/Layout/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="InspectorContent" type="RichTextLabel" parent="TerminalPanel/Margin/Layout/HSplit/InspectorPanel"]
layout_mode = 2
bbcode_enabled = true
theme_override_colors/default_color = Color(0, 0.7, 0, 1)

[node name="ConsolePanel" type="PanelContainer" parent="TerminalPanel/Margin/Layout/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="VBox" type="VBoxContainer" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel"]
layout_mode = 2

[node name="ConsoleHeader" type="Label" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "COMMAND LINE"

[node name="OutputLog" type="RichTextLabel" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
theme_override_colors/default_color = Color(0, 0.85, 0, 1)

[node name="InputRow" type="HBoxContainer" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel/VBox"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel/VBox/InputRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "USER@NEO:~$ "

[node name="CommandInput" type="LineEdit" parent="TerminalPanel/Margin/Layout/HSplit/ConsolePanel/VBox/InputRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "type command..."
caret_blink = true

[node name="MinigamePopup" parent="." instance=ExtResource("2")]
